--- a/.github/workflows/nh-roadworks-watch.yml
+++ b/.github/workflows/nh-roadworks-watch.yml
@@ -1,10 +1,14 @@
 name: National Highways Roadworks Watch
 
 on:
-  # Check every 30 minutes on Mondays (UTC). Times vary, so poll frequently.
+  push:
+    branches: [ main, master ]    # ensures the workflow appears right after you commit
   schedule:
-    - cron: "*/30 * * * 1"
-  workflow_dispatch: {}  # allow manual runs
+    - cron: "*/30 * * * 1"        # poll every 30 min on Mondays (UTC)
+  workflow_dispatch: {}            # “Run workflow” button
+
+permissions:
+  contents: write                  # needed for committing .nh_latest.json
 
 jobs:
   check:
@@ -24,15 +28,10 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-
-          # Primary CKAN Action API (v3 path); fallback to generic path if needed.
           API_PRIMARY="https://data.gov.uk/api/3/action/package_show?id=$DATASET_SLUG"
           API_FALLBACK_URL="https://data.gov.uk/api/action/package_show"
-          # Try GET first, then POST fallback (CKAN supports both)
           PKG_JSON="$(curl -fsSL "$API_PRIMARY" || curl -fsSL -X POST "$API_FALLBACK_URL" \
                        -H "Content-Type: application/json" -d "{\"id\":\"$DATASET_SLUG\"}")"
-
-          # Pick newest XML resource by created/modified/name
           echo "$PKG_JSON" > package.json
           LATEST="$(jq -r '
             .result.resources
@@ -40,17 +39,12 @@ jobs:
             | sort_by(.created // .metadata_modified // .last_modified // .name)
             | last
           ' package.json)"
-
           test -n "$LATEST" || { echo "No XML resources found" >&2; exit 1; }
-
           jq -r '.' <<<"$LATEST" > latest.json
           URL="$(jq -r '.url' latest.json)"
           NAME="$(jq -r '.name' latest.json)"
           CREATED="$(jq -r '.created // .metadata_modified // .last_modified // empty' latest.json)"
-
-          # Sanity: ensure the file is reachable
           curl -fsI "$URL" >/dev/null || { echo "Latest URL not reachable: $URL" >&2; exit 1; }
-
           echo "url=$URL" >> "$GITHUB_OUTPUT"
           echo "name=$NAME" >> "$GITHUB_OUTPUT"
           echo "created=$CREATED" >> "$GITHUB_OUTPUT"
@@ -66,13 +60,12 @@ jobs:
             OLD_URL=""
           fi
           NEW_URL='${{ steps.fetch.outputs.url }}'
-
           if [ -n "$NEW_URL" ] && [ "$NEW_URL" != "$OLD_URL" ]; then
             echo "changed=true" >> "$GITHUB_OUTPUT"
             jq -n \
-              --arg url    "${{ steps.fetch.outputs.url }}" \
-              --arg name   "${{ steps.fetch.outputs.name }}" \
-              --arg created"${{ steps.fetch.outputs.created }}" \
+              --arg url       "${{ steps.fetch.outputs.url }}" \
+              --arg name      "${{ steps.fetch.outputs.name }}" \
+              --arg created   "${{ steps.fetch.outputs.created }}" \
               --arg checked_at "$(date -u +"%Y-%m-%dT%H:%M:%SZ")" \
               '{url:$url, name:$name, created:$created, checked_at:$checked_at}' > "$STATE_FILE"
           else
@@ -87,12 +80,10 @@ jobs:
         run: |
           set -euo pipefail
           [ -n "$SLACK_WEBHOOK_URL" ] || { echo "Missing SLACK_WEBHOOK_URL secret" >&2; exit 1; }
-
           NAME='${{ steps.fetch.outputs.name }}'
           URL='${{ steps.fetch.outputs.url }}'
           CREATED='${{ steps.fetch.outputs.created }}'
           TEXT=":traffic_light: National Highways planned roadworks updated\n*${NAME}*\n<${URL}|Download XML>\n_created: ${CREATED}_"
-
           jq -n --arg text "$TEXT" '{text:$text}' \
             | curl -fsS -X POST -H 'Content-Type: application/json' --data @- "$SLACK_WEBHOOK_URL"
 
